--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,63 @@ Declaring variables
           cursor: pointer;
           border-radius: 5px;
       }
+/* Projects Section */
+.carousel-item {
+  position: relative;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 400px; /* Adjust as needed */
+  object-fit: cover;
+  display: block; /* Ensures the image behaves like a block element */
+  filter: brightness(30%); /* Faded effect on the image */
+}
+
+.carousel-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.4); /* Semi-transparent background to create a translucent effect */
+  z-index: 1; /* Ensures the pseudo-element is above the image */
+}
+
+.carousel-caption {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  padding: 20px;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background for the caption */
+  color: whitesmoke; /* Color of the caption text */
+  border-top-left-radius: 10px; /* Rounds only the top-left corner */
+  border-top-right-radius: 10px; /* Rounds only the top-right corner */
+  text-align: center; /* Centers the text */
+  z-index: 2; /* Ensures the text is above the overlay */
+}
+
+.carousel-caption h3 {
+  color: whitesmoke; /* Color for the description title */
+  margin-top: 0;
+}
+
+.carousel-caption p {
+  color: whitesmoke; /* Color for the description text */
+  margin-bottom: 10px;
+}
+
+.carousel-caption a {
+  margin-top: 10px;
+}
+
+.carousel-control-prev-icon,
+.carousel-control-next-icon {
+  background-color: rgba(0, 0, 0, 0.719); /* Background color for the control icons */
+}
+
 /*!
 Global CSS Resets
 */
