--- a/css/styles.css
+++ b/css/styles.css
@@ -65,10 +65,10 @@ Declaring variables
 
 .carousel-item img {
   width: 100%;
-  height: 400px; /* Adjust as needed */
+  height: 300px; /* Adjust as needed */
   object-fit: cover;
   display: block; /* Ensures the image behaves like a block element */
-  filter: brightness(30%); /* Faded effect on the image */
+  filter: brightness(50%); /* Faded effect on the image */
 }
 
 .carousel-item::before {
@@ -76,9 +76,9 @@ Declaring variables
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.4); /* Semi-transparent background to create a translucent effect */
+  width: 80%;
+  height: 80%;
+  background: rgba(0, 0, 0, 0); /* Semi-transparent background to create a translucent effect */
   z-index: 1; /* Ensures the pseudo-element is above the image */
 }
 
@@ -88,10 +88,10 @@ Declaring variables
   left: 0;
   right: 0;
   padding: 20px;
-  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background for the caption */
+  background: rgba(0, 0, 0, 0); /* Semi-transparent background for the caption */
   color: whitesmoke; /* Color of the caption text */
-  border-top-left-radius: 10px; /* Rounds only the top-left corner */
-  border-top-right-radius: 10px; /* Rounds only the top-right corner */
+  border-top-left-radius: 20px; /* Rounds only the top-left corner */
+  border-top-right-radius: 20px; /* Rounds only the top-right corner */
   text-align: center; /* Centers the text */
   z-index: 2; /* Ensures the text is above the overlay */
 }
@@ -112,7 +112,7 @@ Declaring variables
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-  background-color: rgba(0, 0, 0, 0.719); /* Background color for the control icons */
+  background-color: rgba(0, 0, 0, 0); /* Background color for the control icons */
 }
 
 /*!
@@ -146,7 +146,7 @@ body {
   line-height: 1.5; /* Set line height */
   color: #212529; /* Set base text color */
   text-align: left; /* Set text alignment */
-  background-color: #fff; /* Set background color */
+  background-color: whitesmoke; /* Set background color */
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
